<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.models.User"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".screans.Login">

    <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/inputEmail"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/inputPassword"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:animateLayoutChanges="true">
            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/background_button_submet"/>
            <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:animateLayoutChanges="true">
            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/background_button_submet"/>
            <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/progressBar2"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>

    </LinearLayout>
</layout>