<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instructionsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screans.Instructions">

    <TextView
        android:id="@+id/textInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/primary"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="25sp"
        android:textColor="@color/primary"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInstructions"
        />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="100dp"
        android:textSize="25sp"
        android:layout_height="60dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDes"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>